retool/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retool-ingress
  namespace: retool
  annotations:
    cert-manager.io/cluster-issuer: "retool-factsense-co-jp-cluster-issuer"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - retool.factsense.co.jp
    secretName: retool-factsense-co-jp-tls-secret
  rules:
  - host: retool.factsense.co.jp
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: retool
            port:
              number: 3000
